# jupyter_analysis_visualize

./: .gitignore  ANALYSIS_FILES.txt  ANALYSIS_SUMMARY.md  CODE_SNIPPETS.md  CRASH_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  FRONTEND_CRASH_ANALYSIS_INDEX.md  FRONTEND_INTEGRATION_SUMMARY.md  OPTIMIZATION_CHECKLIST.md  PENDING_VALIDATION_FIX_SUMMARY.md  PER_NODE_STATE_GUIDE.md  QUICK_FIX_REFERENCE.md  README.md  claude.md  gemini.md  package-lock.json  package.json  pyproject.toml  test_tool_node.py  verify_original.py
1117_offline_package/: CHECKLIST.md  GIT_BASH_GUIDE.md  MANIFEST.txt  QUICK_START.txt  README.md  start.bat  start.sh
backend/: API_DESIGN.md  README_OPTIMIZATION.md  app.py  code_executor.py  dag_layout.py  diagnose_node_types.py  execution_manager.py  generate_test_images.py  kernel_manager.py  metadata_parser.py  notebook_manager.py  project_manager.py  pyproject.toml  requirements.txt  test_dag_layout.py  test_declared_output_type_fix.py  test_metadata_deduplication.py  test_notebook_manager.py
designs/: API_ENDPOINTS.md  CACHING_STRATEGY.md  EXECUTION_FLOW_OPTIMIZATION.md  NODE_IMPLEMENTATION_STEPS.md  NODE_INPUT_OUTPUT_MODEL.md  NODE_OUTPUT_DESIGN.md  README.md  SMART_DEPENDENCY_EXECUTION_PLAN.md
frontend/: .gitattributes  index.html  package-lock.json  package.json  tailwind.config.ts  test_pending_validation_fix.md  vite.config.ts
projects/: PROJECT_JSON_VALIDATOR.md  project_builder.py
test/: README.md  TEST_CODE_SAVE.md  create_dict_result_test_project.py  generate_ecommerce_analytics.py  generate_example_notebook.py  generate_test_projects.py  (+17 more)
(+126 files in other folders)
