[project]
name = "jupyter-analysis-visualize"
version = "0.0.1"
description = "A data analysis visualization platform for Jupyter notebook-based projects"
requires-python = ">=3.9"
dependencies = [
    "jupyter-client>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=1.0.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=0.19.0",
    "websockets>=11.0.0",
    "nbformat>=5.0.0",
    "plotly>=5.0.0",
    "pyecharts>=2.0.0",
]
